[project]
name = "comfyui-yuan-bernini"
description = "YUAN Bernini nodes - Bernini in-context conditioning for Wan 2.2 with multi-reference image support"
version = "1.0.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "YUAN" }]
dependencies = []

[project.urls]
Repository = "https://github.com/RH-RunningHub/ComfyUI-RH-Bernini"
Fork = "https://github.com/wuwukaka/ComfyUI-WanAnimatePlus"
